Apache Tez Change Log
=====================

Release 0.8.3: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-3107. tez-tools: Log warn msgs in case ATS has wrong values (e.g startTime > finishTime).
  TEZ-3104. Tez fails on Bzip2 intermediate output format on hadoop 2.7.1 and earlier
  TEZ-3090. MRInput should make dagIdentifier, vertexIdentifier, etc available to the InputFormat jobConf.
  TEZ-3093. CriticalPathAnalyzer should be accessible via zeppelin.
  TEZ-3089. TaskConcurrencyAnalyzer can return negative task count with very large jobs.
  TEZ-2307. Possible wrong error message when submitting new dag
  TEZ-2974. Tez tools: TFileRecordReader in tez-tools should support reading >2 GB tfiles.
  TEZ-3081. Update tez website for trademarks feedback.
  TEZ-3076. Reduce merge memory overhead to support large number of in-memory mapoutputs
  TEZ-3079. Fix tez-tfile parser documentation.
  TEZ-3066. TaskAttemptFinishedEvent ConcurrentModificationException in recovery or history logging services.
  TEZ-3036. Tez AM can hang on startup with no indication of error
  TEZ-3052. Task internal error due to Invalid event: T_ATTEMPT_FAILED at FAILED
  TEZ-2594. Fix LICENSE for missing entries for full and minimal tarballs.
  TEZ-3053. Containers timeout if they do not receive a task within the container timeout interval.
  TEZ-2898. tez tools : swimlanes.py is broken.
  TEZ-2937. Can Processor.close() be called after closing inputs and outputs?
  TEZ-3037. History URL should be set regardless of which history logging service is enabled.
  TEZ-3032. DAG start time getting logged using system time instead of recorded time in startTime field.

Release 0.8.2: 2016-01-19

INCOMPATIBLE CHANGES
  TEZ-3024. Move TaskCommunicator to correct package.
  TEZ-2679. Admin forms of launch env settings
  TEZ-2948. Stop using dagName in the dagComplete notification to TaskCommunicators.
  TEZ-2949. Allow duplicate dag names within session for Tez.