@@ -500,6 +500,12 @@ public class MergeManager implements FetchedInputAllocatorOrderedGrouped {
     LOG.info("closeInMemoryMergedFile -> size: " + mapOutput.getSize() +
              ", inMemoryMergedMapOutputs.size() -> " + 
              inMemoryMergedMapOutputs.size());
+
+    commitMemory += mapOutput.getSize();
+
+    if (commitMemory >= mergeThreshold) {
+      startMemToDiskMerge();
+    }
   }
 
   @Override
@@ -1154,5 +1160,20 @@ public class MergeManager implements FetchedInputAllocatorOrderedGrouped {
                  finalSegments, finalSegments.size(), tmpDir,
                  comparator, progressable, spilledRecordsCounter, null,
                  additionalBytesRead, null);
+  }
+
+  @VisibleForTesting
+  long getCommitMemory() {
+    return commitMemory;
+  }
+
+  @VisibleForTesting
+  long getUsedMemory() {
+    return usedMemory;
+  }
+
+  @VisibleForTesting
+  void waitForMemToMemMerge() throws InterruptedException {
+    memToMemMerger.waitForMerge();
   }
 }
